--- a/.github/workflows/update-index.yml
+++ b/.github/workflows/update-index.yml
@@ -21,7 +21,7 @@ jobs:
         run: |
           helm repo index .
           git config --global user.email "pthaley@gmail.com"
-          git config --global user.name "Pat Haley
+          git config --global user.name "Pat Haley"
           git add index.yaml
           git commit -m "Update chart index"
           git push
