--- a/charts/wiz-kubernetes-integration/Chart.yaml
+++ b/charts/wiz-kubernetes-integration/Chart.yaml
@@ -9,16 +9,16 @@ appVersion: ""
 dependencies:
 - name: wiz-kubernetes-connector
   # repository: https://wiz-sec.github.io/charts
-  repository: file://../charts
+  repository: file://../
   version: ">=3.1.0"
   condition: wiz-kubernetes-connector.enabled
 - name: "wiz-admission-controller"
   # repository: https://wiz-sec.github.io/charts
-  repository: file://../charts
+  repository: file://../
   version:  ">=3.6.0"
   condition: wiz-admission-controller.enabled
 - name: wiz-sensor
   # repository: https://wiz-sec.github.io/charts
-  repository: file://../charts
+  repository: file://../
   version: ">=1.0.5685"
   condition: wiz-sensor.enabled
