--- a/charts/wiz-kubernetes-integration/values.yaml
+++ b/charts/wiz-kubernetes-integration/values.yaml
@@ -3,6 +3,8 @@ global:
     secret:
       create: false
       name: wiz-api-token
+      clientId: ""
+      clientToken: ""
 wiz-kubernetes-connector:
   autoCreateConnector:
     clusterFlavor: "Kubernetes"
