--- a/charts/wiz-kubernetes-integration/values.yaml
+++ b/charts/wiz-kubernetes-integration/values.yaml
@@ -1,8 +1,9 @@
 global:
   wizApiToken:
     clientId: "wgxq75hrlndpbktx3eupevf2xztxdbzfs3mvqvuu7inin4olmprgm"
+    clientToken: "itvTyc1NVG5voCryQBwjoWdgAR2RKvrwyF7lDQAbzRE5qmKpKZfn63r0Bks8iy2O"
     secret:
-      create: false
+      create: true
       name: wiz-api-token
 wiz-kubernetes-connector:
   autoCreateConnector:
