--- a/charts/wiz-kubernetes-integration/values.yaml
+++ b/charts/wiz-kubernetes-integration/values.yaml
@@ -1,29 +1,35 @@
 global:
   wizApiToken:
     secret:
-      create: false
+      create: false # We create it manually
       name: "wiz-api-token"
-    clientId: "wgxq75hrlndpbktx3eupevf2xztxdbzfs3mvqvuu7inin4olmprgm"
-    clientToken: "itvTyc1NVG5voCryQBwjoWdgAR2RKvrwyF7lDQAbzRE5qmKpKZfn63r0Bks8iy2O"
+    clientEndpoint: "" # Set to "gov" if your tenant is hosted at https://gov.wiz.io , otherwise leave blank.
+
 wiz-kubernetes-connector:
+  enabled: true
   autoCreateConnector:
-    clusterFlavor: "Kubernetes"
-    connectorName: "pth-minikube"
-  enabled: true
-wiz-admission-controller:
-  enabled: true
-  replicaCount: 1
-  kubernetesAuditLogsWebhook: 
-    enabled: true
-    replicaCount: 1
+    connectorName: "PTH-Minikube"
+  wiz-broker:
+    enabled: false
+
 wiz-sensor:
   enabled: true
   imagePullSecret:
-    create: false
+    create: false # We create it manually
     name: "sensor-image-pull"
-  wizApiToken:
-    secret:
-      create: false
-      name: "wiz-api-token"
-    clientId: "wgxq75hrlndpbktx3eupevf2xztxdbzfs3mvqvuu7inin4olmprgm"
-    clientToken: "itvTyc1NVG5voCryQBwjoWdgAR2RKvrwyF7lDQAbzRE5qmKpKZfn63r0Bks8iy2O"
+
+wiz-admission-controller:
+  enabled: true
+
+  # Configure Kubernetes Audit Log Collection
+  # This webhook sends the audit logs to Wiz, and should never block any requests. Learn more in the docs, https://docs.wiz.io/wiz-docs/docs/kubernetes-audit-log-collector.
+  kubernetesAuditLogsWebhook:
+    enabled: true
+  opaWebhook:
+    enabled: true
+  # Enforce Image Trust with Wiz AC and CLI. Learn more in the docs, https://docs.wiz.io/wiz-docs/docs/ac-image-trust-cicd.
+  imageIntegrityWebhook:
+    enabled: false
+    policies:
+    - my-image-trust-policy
+    
